refactor: adopt commons-lang3 StringUtils for null-safe string checks
Add commons-lang3 3.20.0 and replace home-grown idioms with battle-tested,
null-safe equivalents:
- x == null || x.isBlank()  -> StringUtils.isBlank(x)   (27 sites)
- x != null && !x.isBlank() -> StringUtils.isNotBlank(x) (16 sites)
- LikeC4 identifier underscore trim -> StringUtils.strip(s, "_")
  (also removes the regex that was the S5852 ReDoS hotspot)

Left as-is: collection .isEmpty() (not a CharSequence — StringUtils.isEmpty
would be wrong) and simple-name extraction (substringAfterLast has different
no-separator semantics).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>