@@ -2,6 +2,7 @@ package dev.dominikbreu.spoonmcp.build;
 
 import java.io.File;
 import java.util.List;
+import org.apache.commons.lang3.StringUtils;
 
 public record BuildModule(
         String name,
@@ -17,7 +18,7 @@ public record BuildModule(
         plugins = List.copyOf(plugins == null ? List.of() : plugins);
         sourceRoots = List.copyOf(sourceRoots == null ? List.of() : sourceRoots);
         resourceRoots = List.copyOf(resourceRoots == null ? List.of() : resourceRoots);
-        if (packagingType == null || packagingType.isBlank()) packagingType = "unknown";
-        if (evidence == null || evidence.isBlank()) evidence = "unknown";
+        if (StringUtils.isBlank(packagingType)) packagingType = "unknown";
+        if (StringUtils.isBlank(evidence)) evidence = "unknown";
     }
 }
