@@ -2,6 +2,7 @@ package dev.dominikbreu.spoonmcp.build;
 
 import java.io.File;
 import java.util.List;
+import org.apache.commons.lang3.StringUtils;
 
 public record BuildProject(
         BuildSystem buildSystem, File root, List<BuildModule> modules, String evidence, double confidence) {
@@ -9,6 +10,6 @@ public record BuildProject(
     public BuildProject {
         if (buildSystem == null) buildSystem = BuildSystem.UNKNOWN;
         modules = List.copyOf(modules == null ? List.of() : modules);
-        if (evidence == null || evidence.isBlank()) evidence = "unknown";
+        if (StringUtils.isBlank(evidence)) evidence = "unknown";
     }
 }
